<resources>
    <string name="app_name">Coursify</string>
    <string name="prompt_password">Your password</string>
    <string name="prompt_email">Your email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="aerror_field_required">This field is required</string>
    <string name="error_field_required">This email is invalid</string>
    <string name="facebook_app_id">949392238547975</string>
    <string name="fb_login_protocol_scheme">fb949392238547975</string>
    <string name="recently_opened">RECENTLY OPENED</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="popular">POPULAR</string>
    <string name="easiness">EASINESS</string>
    <string name="usefulness">USEFULNESS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="alert_dialog_title">Please login to facebook</string>
    <string-array name="course_preferences">
        <item>No selection</item>
        <item>Taken</item>
        <item>Going to take</item>
        <item>Interested</item>
    </string-array>
    <string name="view_profile"><u>View profile</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_user_settings">NewUserSettingsActivity</string>
</resources>
