<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/div_recentlyOpened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRecentlyOpened"
                android:text="@string/recently_opened"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/txtRecentlyOpened"
                android:id="@+id/listRecentlyOpened"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/div_recommended"
            android:layout_below="@id/div_recentlyOpened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRecommended"
                android:text="@string/recommended"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/txtRecommended"
                android:id="@+id/listRecommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/divPopular"
            android:layout_below="@id/div_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtPopular"
                android:text="@string/popular"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/txtPopular"
                android:id="@+id/listPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>