<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:background="@drawable/login_background"
    tools:context="com.example.coursify.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="320dp"
        android:layout_height="460dp"
        android:layout_marginTop="75dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/txtLoginBlurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="Glad to see you're back."
            android:textSize="17dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtEmailInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLoginBlurb"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/colorDarkGray"
                android:textColorHighlight="@color/colorDarkGray"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPasswordInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmailInputLayout"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray"
                android:textColorHighlight="@color/colorDarkGray"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/txtPasswordInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/email_sign_in_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="register"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resendEmail_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/register_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="Resend Verification"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
