<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@drawable/home_background_selector"
        android:paddingBottom="20dp">

        <!--<ImageButton-->
            <!--android:backgroundTint="@android:color/transparent"-->
            <!--android:src="@drawable/ic_profile"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btnShowProfilePage"-->
            <!--android:onClick="showProfilePage"/>-->

        <RelativeLayout
            android:id="@+id/div_recentlyOpened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<ImageButton-->
                <!--android:id="@+id/settings"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:backgroundTint="@android:color/transparent"-->
                <!--android:onClick="showProfileSettings"-->
                <!--android:src="@drawable/ic_settings"-->
                <!--android:text="Settings" />-->

            <TextView
                android:id="@+id/txtRecentlyOpened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/recently_opened"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/txtRecentlyOpened"
                android:id="@+id/listRecentlyOpened"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <RelativeLayout
                android:id="@+id/emptyRecentlyOpened"
                android:layout_width="160dp"
                android:visibility="visible"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txtRecentlyOpened"
                android:layout_height="160dp">

                <TextView
                    android:id="@+id/txtEmptyRecentlyOpened"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="No courses recently opened."
                    android:textColor="@color/colorWhite"
                    android:textSize="10dp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/div_recommended"
            android:layout_below="@id/div_recentlyOpened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRecommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/recommended"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtRecommendedBlurb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRecommended"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Here's some electives we think you might be interested in."
                android:textColor="@color/colorWhite"
                android:textSize="10dp" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/txtRecommendedBlurb"
                android:id="@+id/listRecommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/divPopular"
            android:layout_below="@id/div_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/popular"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtPopularBlurb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPopular"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Take a look at what courses your friends are taking."
                android:textColor="@color/colorWhite"
                android:textSize="10dp" />

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/txtPopularBlurb"
                android:id="@+id/listPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>